--- a/twikey_integration/static/description/index.html
+++ b/twikey_integration/static/description/index.html
@@ -1,61 +1,102 @@
-<section class="oe_container">
-       <div class="row px-3" >
-           <div class="w-100" style="padding-left:95px;font-size: 16px">
-               <div id="pills-tabContent">
-                   <div class="px-3 " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                       <p>
-                           The Twikey module allows usage of the Twikey payment gateway within Odoo.
-                           Currently it allows generation and registration of Sepa Direct Debit Mandates as well as
-                           payments of Invoices generated within Odoo.
-                       </p>
-                   </div>
-                   <div class="px-3 py-4 pt-1 tab-pane fade active show" id="pills-home1" role="tabpanel"
-                        aria-labelledby="pills-home-tab">
-                       <!-- feature tab-->
-                       <h2 style="text-decoration: underline">Configuration </h2>
-                       <p>Configuration of Twikey with Odoo is easy as pie, just pass in your API key and you're ready
-                           to roll.</p>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%;">
-                           <img class="img img-responsive"
-                                style="border-top-left-radius: 10px;border-top-right-radius: 10px;" src="Auth.png">
-                       </div>
-                   </div>
-                   <br/>
-                   <div class="px-3 py-4 pt-1 tab-pane fade active show" id="pills-features" role="tabpanel"
-                        aria-labelledby="pills-home-tab">
-                       <h2 style="text-decoration: underline">Creation of Mandates </h2>
-                       <p>Creation of Mandates from within Odoo via invites to your customers. They are automatically
-                           updated in Odoo when updates are made in Twikey via BankSwitching or other mechanisms.</p>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%;">
-                           <img class="img img-responsive" src="invite.png">
-                       </div>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%;">
-                           <img class="img img-responsive" src="Mandate.png">
-                       </div>
-                   </div>
-                   <br/>
-                   <div class="px-3 pt-1 tab-pane fade active show" id="pills-profile" role="tabpanel" aria-labelledby="pills-home-tab">
-                       <h2 style="text-decoration: underline">Payment of Invoices </h2>
-                       <p>Invoices created from sales orders will include a QR code and sent to Twikey for payment.
-                           Allowing either one time payment of recurring for automatic payment of future invoices.
-                           Updates about (paid) invoice are almost real-time visible within Odoo. </p>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%">
-                           <img class="img img-responsive" src="Invoice.png">
-                       </div>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%">
-                           <img class="img img-responsive" src="Paid_invoice.png">
-                       </div>
-                   </div>
-                   <br/>
-                   <div class="px-3 pt-1 tab-pane fade active show">
-                       <h2 style="text-decoration: underline">Support</h2>
-                       <p> If you have any query or issue, please let us know. We are ready to support.</p>
-                       <u>Contact Us</u>
-                       <ul>
-                           <li><a href="https://www.twikey.com/support" target="_blank"> https://www.twikey.com</a></li>
-                           <li><a href="mailto:support@twikey.com" target="_blank">support@twikey.com</a></li>
-                       </ul>
-                   </div>
+   <section class="oe_container" style="padding: 1rem 0rem 1rem; background-color: #ffffff !important;">
+      <div class="row py-4 px-3">
+         <div class="w-100" style="padding-top:30px;padding-bottom:45px;border-radius: 10px;">
+            <div class="tab-content oe_row oe_spaced" id="pills-tabContent"
+               style="padding-top: 30px; padding-bottom: 30px; padding: 30px;">
+               <div class="px-3 pt-1 tab-pane fade active show" id="pills-home" role="tabpanel" aria-labelledby="
+                  pills-home-tab">
+                  <!-- Overview-->
+                  <h1 style="font-weight: 600;text-align: center;width: 100%;">Overview</h1>
+                  <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #000000;width: 10%;">
+                  <h3 class="oe_slogan" style="text-align: center;font-size: 19px;width: 100%;margin: 0;margin-top: 14px;color: #000 !important;opacity: 1 !important;line-height: 31px;font-weight: 400;letter-spacing: .5px;margin-bottom: 21px;">
+                   Twikey Integration application is integrate Twikey with Odoo. There is an integration of Mandate and Invoices with Odoo. </h3>  
                </div>
-           </div>
+               <div class="px-3 pt-1 tab-pane fade active show" id="pills-home1" role="tabpanel" aria-labelledby="
+                  pills-home-tab">
+                  <!-- feature tab-->
+                  <h1 style="font-weight: 600;text-align: center;width: 100%;"> Authentication </h1>
+                  <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #000000;width: 10%;">
+                  <ul>
+                     <li class="mb8" style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; padding-left: 20px;border-radius: 7px;list-style: none;"> 
+                        <p> - Authentication of Twikey with Odoo </p>
+                        <div class="oe_demo oe_screenshot" style="max-width: 1400px;">
+                            <img class="img img-responsive" style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                src="Auth.png">
+                        </div>
+                     </li> 
+                  </ul>
+                </div>
+                <br/>
+                <div class="px-3 pt-1 tab-pane fade active show" id="pills-features" role="tabpanel" aria-labelledby="
+                  pills-home-tab">
+                  <h1 style="font-weight: 600;text-align: center;width: 100%;"> Mandate </h1>
+                  <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #000000;width: 10%;">
+                  <ul>
+                     <li class="mb8" style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; padding-left: 20px;border-radius: 7px;list-style: none;"> 
+                        <p> - Create a Mandate from Odoo </p>
+                        <div class="oe_demo oe_screenshot" style="max-width: 1400px;">
+                            <img class="img img-responsive" style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                src="invite.png">
+                        </div>
+                     </li> 
+                     <li class="mb8" style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; padding-left: 20px;border-radius: 7px;list-style: none;"> 
+                        <p> - Update Mandate Details on Twikey server as well as in Odoo. </p>
+                        <div class="oe_demo oe_screenshot" style="max-width: 1400px;">
+                            <img class="img img-responsive" style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                src="Mandate.png">
+                        </div>
+                     </li> 
+                  </ul>
+                </div>
+                <br/>
+                <div class="px-3 pt-1 tab-pane fade active show" id="pills-profile" role="tabpanel" aria-labelledby="
+                  pills-home-tab">
+                  <h1 style="font-weight: 600;text-align: center;width: 100%;"> Invoice </h1>
+                  <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #000000;width: 10%;">
+                  <ul>
+                     <li class="mb8" style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; padding-left: 20px;border-radius: 7px;list-style: none;"> 
+                        <p> - Create Invoice from sales order in Odoo and same will be create on Twikey </p>
+                        <div class="oe_demo oe_screenshot" style="max-width: 1400px;">
+                            <img class="img img-responsive" style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                src="Invoice.png">
+                        </div>
+                     </li> 
+                     <li class="mb8" style="font-family: Roboto;color: #000;list-style-type: square;font-size: 19px;line-height: 50px; padding-left: 20px;border-radius: 7px;list-style: none;"> 
+                        <p> - Update Invoice Details on Twikey server as well as in Odoo. </p> 
+                        <div class="oe_demo oe_screenshot" style="max-width: 1400px;">
+                            <img class="img img-responsive" style="border-top-left-radius: 10px;border-top-right-radius: 10px;"
+                                src="Paid_invoice.png">
+                        </div>
+                     </li> 
+                  </ul>
+                </div>
+               </div>
+            </div>
+         </div>
+      </div>
    </section>
+   <section class="oe_container" style="padding: 0% 0% 6% 0%;">
+        <center>
+          <div class="col-12" style="margin: auto !important;
+             width: 100%;
+             padding: 30px;">
+             <h1 style="font-weight: 600;text-align: center;width: 100%;">Support</h1>
+             <hr style="margin-top: 0px;margin-bottom: 2%;border: 0;text-align: center;border-top: 3px solid #000000;width: 10%;">
+             <h4> If you have any query or issue, please let us know. We are ready to support. 
+             </h4>
+             <div class="col-6" style="float:left; width: 50%;">
+                <h4><i class="fa fa-envelope"></i>Email us </h4>
+                <p>contact@techultrasolutions.com</p>
+             </div>
+             <div class="col-6" style="float:left; width: 50%;">
+                <h4><i class="fa fa-phone"></i> Contact Us </h4>
+                <a href="https://www.techultrasolutions.com/contact-us" target="_blank"> https://www.techultrasolutions.com</a>
+             </div>
+          </div>
+        </center>
+   </section>
+   <div class="row">
+          <div class="col-12" style="text-align: center;">
+             <img class="center-block" src="logo.png">
+          </div>
+        </div>
