Backport of 16.0 provider changes

--- a/payment_twikey/static/description/index.html
+++ b/payment_twikey/static/description/index.html
@@ -1,61 +1,79 @@
 <section class="oe_container">
+        <hr>
        <div class="row px-3" >
-           <div class="w-100" style="padding-left:95px;font-size: 16px">
-               <div id="pills-tabContent">
-                   <div class="px-3 " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                       <p>
-                           The Twikey module allows usage of the Twikey payment gateway within Odoo.
-                           Currently it allows generation and registration of Sepa Direct Debit Mandates as well as
-                           payments of Invoices generated within Odoo.
-                       </p>
-                   </div>
-                   <div class="px-3 py-4 pt-1 tab-pane fade active show" id="pills-home1" role="tabpanel"
-                        aria-labelledby="pills-home-tab">
-                       <!-- feature tab-->
-                       <h2 style="text-decoration: underline">Configuration </h2>
-                       <p>Configuration of Twikey with Odoo is easy as pie, just pass in your API key and you're ready
-                           to roll.</p>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%;">
-                           <img class="img img-responsive"
-                                style="border-top-left-radius: 10px;border-top-right-radius: 10px;" src="Auth.png">
-                       </div>
-                   </div>
-                   <br/>
-                   <div class="px-3 py-4 pt-1 tab-pane fade active show" id="pills-features" role="tabpanel"
-                        aria-labelledby="pills-home-tab">
-                       <h2 style="text-decoration: underline">Creation of Mandates </h2>
-                       <p>Creation of Mandates from within Odoo via invites to your customers. They are automatically
-                           updated in Odoo when updates are made in Twikey via BankSwitching or other mechanisms.</p>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%;">
-                           <img class="img img-responsive" src="invite.png">
-                       </div>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%;">
-                           <img class="img img-responsive" src="Mandate.png">
-                       </div>
-                   </div>
-                   <br/>
-                   <div class="px-3 pt-1 tab-pane fade active show" id="pills-profile" role="tabpanel" aria-labelledby="pills-home-tab">
-                       <h2 style="text-decoration: underline">Payment of Invoices </h2>
-                       <p>Invoices created from sales orders will include a QR code and sent to Twikey for payment.
-                           Allowing either one time payment of recurring for automatic payment of future invoices.
-                           Updates about (paid) invoice are almost real-time visible within Odoo. </p>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%">
-                           <img class="img img-responsive" src="Invoice.png">
-                       </div>
-                       <div class="oe_demo oe_screenshot" style="max-width: 1400px;width: 100%">
-                           <img class="img img-responsive" src="Paid_invoice.png">
-                       </div>
-                   </div>
-                   <br/>
-                   <div class="px-3 pt-1 tab-pane fade active show">
-                       <h2 style="text-decoration: underline">Support</h2>
-                       <p> If you have any query or issue, please let us know. We are ready to support.</p>
-                       <u>Contact Us</u>
-                       <ul>
-                           <li><a href="https://www.twikey.com/support" target="_blank"> https://www.twikey.com</a></li>
-                           <li><a href="mailto:support@twikey.com" target="_blank">support@twikey.com</a></li>
-                       </ul>
-                   </div>
+           <div class="w-100" style="padding:0 10px 0 50px;font-size: 1.1em">
+               <div class="text-justify">
+                   <h2>A recurring payment service provider</h2>
+                   <p>The Twikey plugin provides a convenient integration with Twikey, <strong>a payment service provider specializing in
+                       recurring payments and payments for returning customers</strong>.</p>
+                   <p>Installing the Twikey plugin in Odoo allows an automated and efficient financial workflow whether
+                       you use the e-commerce functionality of Odoo through your online shop or use Odoo as an invoice generation tool, this
+                       plugin allows you as well as your customer to make the payment process as painless as possible. It does this in several
+                       ways:</p>
+                   <ul>
+                       <li><strong>Invite your customers to a recurring payment method</strong> whether it's via direct debit or credit card reducing your
+                           financial costs as well as improving your cash flow as the predictable nature of recurring payments (and direct debit
+                           in particular) allows businesses to accurately forecast and plan their incoming cash flow.</li>
+                       <li>Mandate Management: Twikey offers a comprehensive solution for <strong>managing mandates</strong>. With the Twikey plugin, merchants
+                           can efficiently handle the creation, modification, and cancellation of mandates directly from within Odoo. This
+                           simplifies mandate management and ensures compliance with relevant regulations.</li>
+                       <li>The existing Sepa mandates as well as any recurring credit card your customer can be used for <strong>registering payments</strong>
+                           either in a customer flow in the online show or when you're on your monthly billing run. The heavy lifting of sending
+                           the transactions to one or more banks or downstream payment providers is being done in Twikey where you can configure
+                           how those transactions are finally sent to either one or more banks/payment providers.</li>
+                       <li>Direct Debit Payments: Via Twikey's gateway to multiple banks, the transactions can be directly retrieved from their
+                           customer's bank accounts <strong>without the need to ever download/upload files in your bank environment</strong>.</li>
+                       <li>A Twikey Provider is available in the list of <strong>Odoo payment providers</strong>, giving your customers a transparent and easy way
+                           for future purchases. This lowers the bar making the purchases on your website even easier. The provider can be used
+                           for tokenized methods as well as for one-off payments. As some of your customers might not want to pay every invoice
+                           in an automated way (e.g. setup invoices)</li>
+                       <li>The plugin also reduces the operational overhead by <strong>leveraging the reconciliation engine of Odoo</strong> as well as
+                           providing the reconciliation files for use in third-party accounting software, reducing the need for manual
+                           intervention and minimizing errors. This automation saves time and resources, allowing businesses to focus on core
+                           activities while maintaining accurate and up-to-date payment records.</li>
+                       <li>The plugin synchronizes payment information between Twikey and Odoo, enabling businesses to
+                           maintain accurate records and monitor the status of payments. This simplifies the reconciliation process even further
+                           and enhances financial visibility.</li>
+                   </ul>
+                   <p>In summary, installing the Twikey plugin in Odoo provides customers with a comprehensive solution for recurring
+                       payment management, mandate handling, and automation. It streamlines payment processes, improves operational efficiency,
+                       and facilitates seamless integration with Odoo's existing functionalities.</p>
+               </div>
+               <div>
+                   <h2>Once installed</h2>
+                   <p>Once the plugin is installed, you'll be able to do the following:</p>
+                   <ul>
+                       <li>have a mandate overview in the Contacts menu</li>
+                       <li>invite a specific (or range) of customer to do their payments via Direct Debit instead of costly creditcard</li>
+                       <li>confirmed invoices generated through a sales order can either be sent with or without pdf to Twikey</li>
+                       <li>qr code going to the Twikey paypage where the state of the page is directly visible</li>
+                       <li>qr code also usable in belgian bank apps</li>
+					   <li>payment links via the Odoo payment provider</li>
+                       <li>payment tokens are registered automatically allowing payment registration</li>
+                       <li>creation of one or multiple payment methods via the Odoo payment providers, supporting both tokenisation as well as one-time payments.</li>
+                       <li>allow usage of multiple bank accounts for direct debit collection</li>
+                       <li>allow usage of multiple payment provider for different payment methods</li>
+                       <li>see updates about customer actions in a dedicated chat channel</li>
+                   </ul>
+                   <p>Next to these actions, a couple of cron jobs will update your odoo environment if webhooks aren't enabled/available in your setup for real-time feedback.</p>
+               </div>
+               <div>
+                   <h2>Configuration</h2>
+                   <p>Configuration is really straightforward. Once the plugin is installed, head to the settings and paste the api url and key you copied
+                   from the <a href="//www.twikey.com/r/admin/#/c/settings/api">Twikey Api settings</a>.</p>
+                   <ul>
+                       <li>Be sure to test the connectivity ensuring there is no network issue between your odoo environment and Twikey</li>
+                       <li>Synchronise the Twikey profiles so you can start using the plugin right a way</li>
+                       <li>[Only for ecommerce] Head to "Payment providers" and duplicate the default while setting the correct profile and payment method.
+                       Note: be sure to enable the payment method in the profile on Twikey side as it is doing a direct call to the
+                           <a href="//www.twikey.com/api/#sign-a-mandate">sign api</a></li>
+                   </ul>
+               </div>
+			   <div>
+					<h2>Installation - Support</h2>
+					<p>For installation support, contact your own integrator who installed your Odoo set-up.</p>
+					<p>Or contact one of our partners: <a href="//www.twikey.com/partner/odoo.html">Twikey Odoo integrators</a></p>
                </div>
            </div>
-   </section>
+       </div>
+</section>
